Referencing jdk.internal.misc from javac/java
--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED